# EasyBE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.prod.yml  main.py  pyproject.toml  requirements.txt
.github/: commit_template.txt
.github/workflows/: checks.yml  deploy.yml
apps/cart/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cartitem_options_and_more.py  0002_cart_session_key_alter_cart_user.py  0002_initial.py  0003_alter_cart_user_alter_cartitem_cart_and_more.py  0003_initial.py  0003_remove_cart_session_key_remove_cart_user_and_more.py  0004_alter_cartitem_options.py  0004_cart_customer_not_null.py  0005_alter_cartitem_quantity.py  0006_merge_20250813_1549.py  (+10 more)
apps/common/: middleware.py
apps/delivery/: models.py
apps/feedback/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/orders/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/products/: models.py  urls.py
apps/stores/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/taste_test/: apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
apps/users/: apps.py  jwt.py  models.py  serializers.py  social_auth.py  tests.py  urls.py  user_manager.py
config/: urls.py
config/settings/: base.py  dev.py  local.py  prod.py
core/utils/: ncloud_manager.py  temp_token.py
resources/nginx/: nginx.conf
resources/scripts/: code_formatting.sh  mypy_test.sh
(+127 files in other folders)
